Thu Aug 24 18:53:32 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Mon Aug 21 17:07:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* str_conv.c - Add krb5_timestamp_to_sfstring().  This converts time
		to a short string, potentially filled.  Use strftime() for
		krb5_timestamp_to_string() if present so that locale-dependent
		time format is used.


Tue Aug 8 17:35:10 EDT 1995	Paul Park	(pjpark@mit.edu)
	* str_conv.c - Fix Purify complaint.


Mon Aug 7 17:38:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* keysalt.c(krb5_string_to_keysalt) - Don't do the silly whitespace
		filling logic.  If the string has imbedded whitespace, then
		it's just tough rocks.  Save replaced string separators and
		terminators so that they string looks the same coming out as
		going in.


Fri Aug 4 16:21:50 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in, .Sanitize, keysalt.c - Add keysalt.c modules.


Thu Aug 3 11:51:14 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - Actually pass back the parsed string value in krb5_aprof_
		get_deltat().


Mon Jul 31 15:52:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_kw_{enc,dec}.c - Add support for new kadmin protocol.
	* alt_prof.c - Remove string conversion routine, use the ones in str_
		conv.c.  Convert krb5_read_realm_params() to use these string
		conversion routines so that the KDC profile is more textual
		as opposed to being numeric.
	* str_conv.c - String conversion routines.
	* Makefile.in, configure.in - Add support for str_conv.c
	* t_dbentry.c - Test new kadmin protocol.

Mon Jul 17 15:16:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - Add krb5_{read,free}_realm_params() to read in per-
		realm KDC data and to free the allocated structure.

Mon Jul 10 17:59:23 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* adm_kt_dec.c, adm_kt_enc.c, adm_kw_dec.c, adm_kw_enc.c,
		alt_prof.c, logger.c: Include adm_proto.h for prototypes.

Fri Jul 7 16:23:57 EDT 1995	Paul Park	(pjpark@mit.edu)