@@ -36,6 +36,7 @@ alt_prof.c
 configure.in
 configure
 keysalt.c
+krb5strings.M
 logger.c
 str_conv.c
 t_dbentry.c
