@@ -1,3 +1,8 @@
+
+Tue Aug 29 15:31:50 EDT 1995	Paul Park	(pjpark@mit.edu)
+	* .Sanitize, krb5strings.M - Add new manpage describing string syntax
+		for common datatypes handled by str_conv.c.
+
 Thu Aug 24 18:53:32 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* .Sanitize: Update file list
